test: teste para verificar exceções de validações